k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finops
  labels:
    app.kubernetes.io/part-of: nagp-k8s-finops
